# videas_blog

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  blog_config.toml
migrations/2024-10-06-134210_create_posts/: up.sql
src/: blog_config.rs  lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/posts/: handlers.rs  mod.rs  posts_service.rs  templates.rs
templates/: 404.html  base.html  head_base.html  index.html
templates/config/: bio.html  footer.html  header_links.html  logo.html  picture.html
templates/posts/: _post_card.html  _post_head.html  show.html
wwwroot/assets/: styles.css
