[package]
name = "videas_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
once_cell = "1.20.2"
toml = "0.8.19"

